--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
         <h2>Guyhaum</h2>
       </div>
       <div class="m-0 w-100">
-        <div class="d-flex flex-row gap-5 align-items-center m-2 p-2" style="background-color: #fafafa">
-          <div class="d-flex flex-row gap-3 justify-content-start w-100">
+        <div class="d-flex flex-wrap gap-3 align-items-center justify-content-between m-2 p-2" style="background-color: #fafafa">
+          <div class="d-flex flex-row gap-3 justify-content-start">
             <p class="text-nowrap m-0">HP</p>
             <label style="width: 2rem">
               <input class="border-0 w-100" placeholder="32">
             </label>
             <p class="m-0">/32</p>
           </div>
-          <div class="d-flex flex-row gap-3 justify-content-start w-100">
+          <div class="d-flex flex-row gap-3 justify-content-start">
             <p class="text-nowrap m-0">Hit Dice</p>
             <label style="width: 3rem">
               <input class="border-0 w-100" placeholder="3d10">
             </label>
             <p class="m-0">/3d10</p>
           </div>
-          <div class="d-flex flex-row gap-3 justify-content-start w-100">
+          <div class="d-flex flex-row gap-3 justify-content-start">
             <p class="text-nowrap m-0">Temp HP</p>
             <label style="width: 2rem">
               <input class="border-0 w-100" placeholder="0">
             </label>
           </div>
-          <div class="d-flex flex-row gap-3 justify-content-start w-100">
+          <div class="d-flex flex-row gap-3 justify-content-start">
             <p class="text-nowrap m-0">Lvl</p>
             <p class="m-0">3</p>
           </div>
@@ -118,6 +118,108 @@
             <p class="font-weight-bold m-0"><strong>CHA</strong></p>
             <p class="m-0">12</p>
             <p class="m-0"><small>+1</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="p-2 m-2" style="background-color: #fafafa">
+        <h4>Saving Throws</h4>
+        <div class="d-flex gap-4 justify-content-around">
+          <div class="d-flex flex-column align-items-center">
+            <p class="font-weight-bold m-0"><strong>STR : </strong>+5</p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="font-weight-bold m-0"><strong>DEX : </strong>+1</p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="font-weight-bold m-0"><strong>CON : </strong>+4</p>
+          </div>
+        </div>
+        <div class="d-flex gap-4 justify-content-around py-2">
+          <div class="d-flex flex-column align-items-center">
+            <p class="font-weight-bold m-0"><strong>INT : </strong>-1</p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="font-weight-bold m-0"><strong>WIS : </strong>+1</p>
+          </div>
+          <div class="d-flex flex-column align-items-center py-2">
+            <p class="font-weight-bold m-0"><strong>CHA : </strong>+1</p>
+          </div>
+        </div>
+      </div>
+      <div class="p-2 m-2" style="background-color: #fafafa">
+        <h4>Skills</h4>
+        <div class="d-flex flex-wrap gap-4 justify-content-around">
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Acrobatics</strong> <small>P</small></p>
+            <p class="m-0"><small>+3</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Animal Handling</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Arcana</strong></p>
+            <p class="m-0"><small>-1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Athletics</strong> <small>P</small></p>
+            <p class="m-0"><small>+5</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Deception</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>History</strong></p>
+            <p class="m-0"><small>-1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Insight</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Intimidation</strong> <small>P</small></p>
+            <p class="m-0"><small>+3</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Investigation</strong></p>
+            <p class="m-0"><small>-1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Medicine</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Nature</strong></p>
+            <p class="m-0"><small>-1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Perception</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Performance</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Persuasion</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Religion</strong></p>
+            <p class="m-0"><small>-1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Sleight of Hand</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Stealth</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Survival</strong> <small>P</small></p>
+            <p class="m-0"><small>+3</small></p>
           </div>
         </div>
       </div>
