Icons and stats

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
   <meta property="og:image:alt" content="">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="icon" href="img/icon.png" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
 
-  <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
 
   <!-- Latest compiled and minified CSS -->
@@ -32,29 +31,30 @@
 
 <body class="h-100 w-100">
 <nav class="navbar navbar-expand-lg flex-column mb-lg-4 grey-background pb-0">
-  <a class="navbar-brand mx-auto mb-3" href="#"><img src="img/logo.png"></a>
+  <a class="navbar-brand mx-auto mb-3" href="#"><img style="height: 5rem; width: 5rem" src="img/logo.png"></a>
   <div class="navbar-collapse justify-content-center w-50 mb-2">
-    <ul class="navbar-nav mt-2 mt-lg-0">
+    <ul class="navbar-nav mt-2 mt-lg-0 justify-content-center">
       <li class="nav-item">
-        <a class="nav-link" href="#">Ali</a>
+        <a class="nav-link text-center" href="#">Ali</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Rosalie</a>
+        <a class="nav-link text-center" href="#">Rosalie</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">FX</a>
+        <a class="nav-link text-center" href="#">FX</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Javier</a>
+        <a class="nav-link text-center" href="#">Javier</a>
       </li>
     </ul>
   </div>
 </nav>
 <main>
-  <div class="container-fluid p-2" style="background-color: #cccccc">
-    <div class="container-fluid p-2 w-100" id="charac" style="background-color: white">
-      <div>
+  <div class="container-fluid p-4" style="background-color: #cccccc">
+    <div class="container-fluid p-4 w-100" id="charac" style="background-color: white">
+      <div class="d-flex align-items-center gap-4">
         <h2>Guyhaum</h2>
+        <p class="m-0"><small>Fighter (Samurai)</small></p>
       </div>
       <div class="m-0 w-100">
         <div class="d-flex flex-wrap gap-3 align-items-center justify-content-between m-2 p-2" style="background-color: #fafafa">
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="p-2 m-2" style="background-color: #fafafa">
-        <h4>Stats</h4>
+        <h4>Ability Scores</h4>
         <div class="d-flex gap-4 justify-content-around">
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>STR</strong></p>
@@ -220,6 +220,31 @@
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Survival</strong> <small>P</small></p>
             <p class="m-0"><small>+3</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="p-2 m-2" style="background-color: #fafafa">
+        <h4>Stats</h4>
+        <div class="d-flex flex-wrap gap-4 justify-content-around">
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Armor Class</strong></p>
+            <p class="m-0"><small>18</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Initiative</strong></p>
+            <p class="m-0"><small>+1</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Speed</strong></p>
+            <p class="m-0"><small>30</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Passive Perception</strong></p>
+            <p class="m-0"><small>11</small></p>
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="m-0 text-nowrap"><strong>Proficiency</strong></p>
+            <p class="m-0"><small>+2</small></p>
           </div>
         </div>
       </div>
