--- a/fx.html
+++ b/fx.html
@@ -52,9 +52,9 @@
   <div class="container-fluid p-4" style="background-color: #cccccc">
     <div class="container-fluid p-4 w-100" id="charac" style="background-color: white">
       <div class="d-flex align-items-center gap-4">
-        <h2>Guyhaum</h2>
-        <p class="m-0"><small>Fighter (Samurai) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Goliath</small></p>
-        <img class="ms-auto" style="height: 8rem; width: 8rem" src="img/Goliath.jpg">
+        <h2>FX</h2>
+        <p class="m-0"><small>Warlock (Fiend) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Black Dragonborn</small></p>
+        <img class="ms-auto" style="height: 8rem; width: 8rem" src="img/Dragonborn.jpg">
       </div>
       <div class="m-0 w-100">
         <div class="d-flex flex-wrap gap-3 align-items-center justify-content-between m-2 p-2" style="background-color: #fafafa">
@@ -89,13 +89,13 @@
         <div class="d-flex gap-4 justify-content-around">
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>STR</strong></p>
-            <p class="m-0">17</p>
-            <p class="m-0"><small>+3</small></p>
+            <p class="m-0">10</p>
+            <p class="m-0"><small>+0</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>DEX</strong></p>
-            <p class="m-0">12</p>
-            <p class="m-0"><small>+1</small></p>
+            <p class="m-0">10</p>
+            <p class="m-0"><small>+0</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>CON</strong></p>
@@ -106,18 +106,18 @@
         <div class="d-flex gap-4 justify-content-around py-2">
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>INT</strong></p>
-            <p class="m-0">9</p>
-            <p class="m-0"><small>-1</small></p>
+            <p class="m-0">10</p>
+            <p class="m-0"><small>+0</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>WIS</strong></p>
-            <p class="m-0">12</p>
-            <p class="m-0"><small>+1</small></p>
+            <p class="m-0">10</p>
+            <p class="m-0"><small>+0</small></p>
           </div>
           <div class="d-flex flex-column align-items-center py-2">
             <p class="font-weight-bold m-0"><strong>CHA</strong></p>
-            <p class="m-0">12</p>
-            <p class="m-0"><small>+1</small></p>
+            <p class="m-0">16</p>
+            <p class="m-0"><small>+3</small></p>
           </div>
         </div>
       </div>
