--- a/fx.html
+++ b/fx.html
@@ -51,10 +51,10 @@
 <main>
   <div class="container-fluid p-4" style="background-color: #cccccc">
     <div class="container-fluid p-4 w-100" id="charac" style="background-color: white">
-      <div class="d-flex align-items-center gap-4">
+      <div class="d-flex flex-wrap justify-content-center align-items-center gap-4">
         <h2>FX</h2>
         <p class="m-0"><small>Warlock (Fiend) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Black Dragonborn</small></p>
-        <img class="ms-auto" style="height: 8rem; width: 8rem" src="img/Dragonborn.jpg">
+        <img class="m-lg-auto m-md-auto" style="height: 8rem; width: 8rem" src="img/Dragonborn.jpg">
       </div>
       <div class="m-0 w-100">
         <div class="d-flex flex-wrap gap-3 align-items-center justify-content-between m-2 p-2" style="background-color: #fafafa">
