--- a/fx.html
+++ b/fx.html
@@ -53,24 +53,24 @@
     <div class="container-fluid p-4 w-100" id="charac" style="background-color: white">
       <div class="d-flex flex-wrap justify-content-center align-items-center gap-4">
         <h2>FX</h2>
-        <p class="m-0"><small>Warlock (Fiend) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Black Dragonborn</small></p>
-        <img class="m-lg-auto m-md-auto" style="height: 8rem; width: 8rem" src="img/Dragonborn.jpg">
+        <p class="m-0"><small>Warlock (Undead) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Black Dragonborn</small></p>
+        <img class="m-lg-auto m-md-auto" style="height: 8rem; width: 8rem" src="img/Dragonborn.jpg" alt="black dragonborn">
       </div>
       <div class="m-0 w-100">
         <div class="d-flex flex-wrap gap-3 align-items-center justify-content-between m-2 p-2" style="background-color: #fafafa">
           <div class="d-flex flex-row gap-3 justify-content-start">
             <p class="text-nowrap m-0">HP</p>
             <label style="width: 2rem">
-              <input class="border-0 w-100" placeholder="32">
+              <input class="border-0 w-100" placeholder="22">
             </label>
-            <p class="m-0">/32</p>
+            <p class="m-0">/22</p>
           </div>
           <div class="d-flex flex-row gap-3 justify-content-start">
             <p class="text-nowrap m-0">Hit Dice</p>
             <label style="width: 3rem">
-              <input class="border-0 w-100" placeholder="3d10">
+              <input class="border-0 w-100" placeholder="3d8">
             </label>
-            <p class="m-0">/3d10</p>
+            <p class="m-0">/3d8</p>
           </div>
           <div class="d-flex flex-row gap-3 justify-content-start">
             <p class="text-nowrap m-0">Temp HP</p>
@@ -94,8 +94,8 @@
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>DEX</strong></p>
-            <p class="m-0">10</p>
-            <p class="m-0"><small>+0</small></p>
+            <p class="m-0">12</p>
+            <p class="m-0"><small>+1</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>CON</strong></p>
@@ -111,8 +111,8 @@
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>WIS</strong></p>
-            <p class="m-0">10</p>
-            <p class="m-0"><small>+0</small></p>
+            <p class="m-0">12</p>
+            <p class="m-0"><small>+1</small></p>
           </div>
           <div class="d-flex flex-column align-items-center py-2">
             <p class="font-weight-bold m-0"><strong>CHA</strong></p>
@@ -125,24 +125,24 @@
         <h4>Saving Throws</h4>
         <div class="d-flex gap-4 justify-content-around">
           <div class="d-flex flex-column align-items-center">
-            <p class="font-weight-bold m-0"><strong>STR : </strong>+5</p>
+            <p class="font-weight-bold m-0"><strong>STR : </strong>+0</p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>DEX : </strong>+1</p>
           </div>
           <div class="d-flex flex-column align-items-center">
-            <p class="font-weight-bold m-0"><strong>CON : </strong>+4</p>
+            <p class="font-weight-bold m-0"><strong>CON : </strong>+2</p>
           </div>
         </div>
         <div class="d-flex gap-4 justify-content-around py-2">
           <div class="d-flex flex-column align-items-center">
-            <p class="font-weight-bold m-0"><strong>INT : </strong>-1</p>
+            <p class="font-weight-bold m-0"><strong>INT : </strong>-0</p>
           </div>
           <div class="d-flex flex-column align-items-center">
-            <p class="font-weight-bold m-0"><strong>WIS : </strong>+1</p>
+            <p class="font-weight-bold m-0"><strong>WIS : </strong>+3</p>
           </div>
           <div class="d-flex flex-column align-items-center py-2">
-            <p class="font-weight-bold m-0"><strong>CHA : </strong>+1</p>
+            <p class="font-weight-bold m-0"><strong>CHA : </strong>+5</p>
           </div>
         </div>
       </div>
@@ -150,48 +150,48 @@
         <h4>Skills</h4>
         <div class="d-flex flex-wrap gap-4 justify-content-around">
           <div class="d-flex flex-column align-items-center">
-            <p class="m-0 text-nowrap"><strong>Acrobatics</strong> <small>P</small></p>
-            <p class="m-0"><small>+3</small></p>
+            <p class="m-0 text-nowrap"><strong>Acrobatics</strong></p>
+            <p class="m-0"><small>+1</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Animal Handling</strong></p>
             <p class="m-0"><small>+1</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
-            <p class="m-0 text-nowrap"><strong>Arcana</strong></p>
-            <p class="m-0"><small>-1</small></p>
+            <p class="m-0 text-nowrap"><strong>Arcana</strong> <small>P</small></p>
+            <p class="m-0"><small>+2</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
-            <p class="m-0 text-nowrap"><strong>Athletics</strong> <small>P</small></p>
-            <p class="m-0"><small>+5</small></p>
+            <p class="m-0 text-nowrap"><strong>Athletics</strong></p>
+            <p class="m-0"><small>+0</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Deception</strong></p>
-            <p class="m-0"><small>+1</small></p>
+            <p class="m-0"><small>+3</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>History</strong></p>
-            <p class="m-0"><small>-1</small></p>
+            <p class="m-0"><small>+0</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Insight</strong></p>
             <p class="m-0"><small>+1</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
-            <p class="m-0 text-nowrap"><strong>Intimidation</strong> <small>P</small></p>
+            <p class="m-0 text-nowrap"><strong>Intimidation</strong></p>
             <p class="m-0"><small>+3</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
-            <p class="m-0 text-nowrap"><strong>Investigation</strong></p>
-            <p class="m-0"><small>-1</small></p>
+            <p class="m-0 text-nowrap"><strong>Investigation</strong> <small>P</small></p>
+            <p class="m-0"><small>+2</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Medicine</strong></p>
-            <p class="m-0"><small>+1</small></p>
+            <p class="m-0"><small>+0</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Nature</strong></p>
-            <p class="m-0"><small>-1</small></p>
+            <p class="m-0"><small>+0</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Perception</strong></p>
@@ -199,15 +199,15 @@
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Performance</strong></p>
-            <p class="m-0"><small>+1</small></p>
+            <p class="m-0"><small>+3</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Persuasion</strong></p>
-            <p class="m-0"><small>+1</small></p>
+            <p class="m-0"><small>+3</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Religion</strong></p>
-            <p class="m-0"><small>-1</small></p>
+            <p class="m-0"><small>+0</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Sleight of Hand</strong></p>
@@ -218,8 +218,8 @@
             <p class="m-0"><small>+1</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
-            <p class="m-0 text-nowrap"><strong>Survival</strong> <small>P</small></p>
-            <p class="m-0"><small>+3</small></p>
+            <p class="m-0 text-nowrap"><strong>Survival</strong></p>
+            <p class="m-0"><small>+1</small></p>
           </div>
         </div>
       </div>
@@ -228,7 +228,7 @@
         <div class="d-flex flex-wrap gap-4 justify-content-around">
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Armor Class</strong></p>
-            <p class="m-0"><small>18</small></p>
+            <p class="m-0"><small>12</small></p>
           </div>
           <div class="d-flex flex-column align-items-center">
             <p class="m-0 text-nowrap"><strong>Initiative</strong></p>
