--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
       <div class="d-flex flex-wrap justify-content-center align-items-center gap-4">
         <h2>Guyhaum</h2>
         <p class="m-0"><small>Fighter (Samurai) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Goliath</small></p>
-        <img class="m-lg-auto m-md-auto" style="height: 8rem; width: 8rem" src="img/Goliath.jpg">
+        <img class="m-lg-auto m-md-auto" style="height: 8rem; width: 8rem" src="img/Goliath.jpg" alt="goliath">
       </div>
       <div class="m-0 w-100">
         <div class="d-flex flex-wrap gap-3 align-items-center justify-content-between m-2 p-2" style="background-color: #fafafa">
           <div class="d-flex flex-row gap-3 justify-content-start">
             <p class="text-nowrap m-0">HP</p>
             <label style="width: 2rem">
-              <input class="border-0 w-100" placeholder="32">
+              <input class="border-0 w-100" placeholder="28">
             </label>
-            <p class="m-0">/32</p>
+            <p class="m-0">/28</p>
           </div>
           <div class="d-flex flex-row gap-3 justify-content-start">
             <p class="text-nowrap m-0">Hit Dice</p>
