action and bonus ali

--- a/index.html
+++ b/index.html
@@ -248,6 +248,92 @@
           </div>
         </div>
       </div>
+      <div class="p-2 m-2" style="background-color: #fafafa">
+        <h4>Actions</h4>
+        <div class="collapse show p-lg-3" id="foldableDiv">
+          <ul class="navbar-nav justify-content-center">
+            <li class="nav-item my-2">
+              <p class="m-0"><strong>Attack</strong></p>
+              <div class="d-flex p-lg-2 gap-4 justify-content-between align-items-center">
+                <div class="d-flex gap-5 flex-column justify-content-center align-items-center">
+                  <p class="m-0 text-center"><strong>Longsword</strong> (Versatile)</p>
+                  <p class="m-0 text-center"><strong>Greatsword</strong> (Two-handed)</p>
+                </div>
+                <div class="d-flex gap-5 flex-column justify-content-center align-items-center">
+                  <p class="m-0">To Hit: <small>1d20+5</small></p>
+                  <p class="m-0">To Hit: <small>1d20+5</small></p>
+                </div>
+                <div class="d-flex gap-5 flex-column justify-content-center align-items-center">
+                  <p class="m-0 text-center">Damage: <small>1d8+3 or 1d10+3 (Slashing)</small></p>
+                  <p class="m-0">Damage: <small>2d6+3 (Slashing)</small></p>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item my-2">
+              <p class="m-0"><strong>Dash</strong></p>
+              <ul class="navbar-nav justify-content-center">
+                <li class="nav-item d-flex flex-wrap gap-lg-5 gap-md-5">
+                  <p class="m-0">When you take the Dash action, you gain extra movement for the current turn. The increase equals your speed, after applying any modifiers. With a speed of 30 feet, for example, you can move up to 60 feet on your turn if you dash.</p>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item my-2">
+              <p class="m-0"><strong>Hide</strong></p>
+              <ul class="navbar-nav justify-content-center">
+                <li class="nav-item d-flex flex-wrap gap-lg-5 gap-md-5">
+                  <p class="m-0">Hiding requires a Stealth (Dex) skill check. If you are successfully hidden, attacks against you have disadvantage and your attacks have advantage against foes who have not spotted you.</p>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item my-2">
+              <p class="m-0"><strong>Help</strong></p>
+              <ul class="navbar-nav justify-content-center">
+                <li class="nav-item d-flex flex-wrap gap-lg-5 gap-md-5">
+                  <p class="m-0">The Help action provides advantage to an allie's next skill check or attack roll.</p>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item my-2">
+              <p class="m-0"><strong>Dodge</strong></p>
+              <ul class="navbar-nav justify-content-center">
+                <li class="nav-item d-flex flex-wrap gap-lg-5 gap-md-5">
+                  <p class="m-0">Taking the dodge action gives foes disadvantage on attack rolls against you until the start of your next turn.</p>
+                </li>
+            </ul>
+            </li>
+          </ul>
+        </div>
+        <a class="btn" data-bs-toggle="collapse" href="#foldableDiv" role="button" id="toggleButton">
+          Show less
+        </a>
+      </div>
+      <div class="p-2 m-2" style="background-color: #fafafa">
+        <h4>Bonus Actions</h4>
+        <div class="collapse show p-lg-3" id="foldableDivBonus">
+          <ul class="navbar-nav justify-content-center">
+            <li class="nav-item my-2">
+              <p class="m-0"><strong>Fighting Spirit</strong></p>
+              <ul class="navbar-nav justify-content-center">
+                <li class="nav-item d-flex flex-wrap gap-lg-5 gap-md-5">
+                  <p class="m-0">your intensity in battle can shield you and help you strike true. As a bonus action on your turn, you can give yourself advantage on all weapon attack rolls until the end of the current turn. When you do so, you also gain 5 temporary hit points. You can use this feature three times. You regain all expended uses of it when you finish a long rest.</p>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item my-2">
+              <p class="m-0"><strong>Second Wind</strong></p>
+              <ul class="navbar-nav justify-content-center">
+                <li class="nav-item d-flex flex-wrap gap-lg-5 gap-md-5">
+                  <p class="m-0">You have a limited well of stamina that you can draw on to protect yourself from harm. On your turn, you can use a bonus action to regain hit points equal to 1d10 + your fighter level.
+                    Once you use this feature, you must finish a short or long rest before you can use it again.</p>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <a class="btn" data-bs-toggle="collapse" href="#foldableDivBonus" role="button" id="toggleButtonBonus">
+          Show less
+        </a>
+      </div>
     </div>
   </div>
 </main>
