--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <p class="m-0"><strong>Fighting Spirit</strong></p>
               <ul class="navbar-nav justify-content-center">
                 <li class="nav-item d-flex flex-wrap gap-lg-5 gap-md-5">
-                  <p class="m-0">your intensity in battle can shield you and help you strike true. As a bonus action on your turn, you can give yourself advantage on all weapon attack rolls until the end of the current turn. When you do so, you also gain 5 temporary hit points. You can use this feature three times. You regain all expended uses of it when you finish a long rest.</p>
+                  <p class="m-0">Your intensity in battle can shield you and help you strike true. As a bonus action on your turn, you can give yourself advantage on all weapon attack rolls until the end of the current turn. When you do so, you also gain 5 temporary hit points. You can use this feature three times. You regain all expended uses of it when you finish a long rest.</p>
                 </li>
               </ul>
             </li>
@@ -331,6 +331,33 @@
           </ul>
         </div>
         <a class="btn" data-bs-toggle="collapse" href="#foldableDivBonus" role="button" id="toggleButtonBonus">
+          Show less
+        </a>
+      </div>
+      <div class="p-2 m-2" style="background-color: #fafafa">
+        <h4>Free Actions/Class Features</h4>
+        <div class="collapse show p-lg-3" id="foldableDivFree">
+          <ul class="navbar-nav justify-content-center">
+            <li class="nav-item my-2">
+              <p class="m-0"><strong>Action Surge</strong></p>
+              <ul class="navbar-nav justify-content-center">
+                <li class="nav-item d-flex flex-wrap gap-lg-5 gap-md-5">
+                  <p class="m-0">You can push yourself beyond your normal limits for a moment. On your turn, you can take one additional action.
+                    Once you use this feature, you must finish a short or long rest before you can use it again.</p>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item my-2">
+              <p class="m-0"><strong>Fighting Style : Defense</strong></p>
+              <ul class="navbar-nav justify-content-center">
+                <li class="nav-item d-flex flex-wrap gap-lg-5 gap-md-5">
+                  <p class="m-0">While you are wearing armor, you gain a +1 bonus to AC.</p>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <a class="btn" data-bs-toggle="collapse" href="#foldableDivFree" role="button" id="toggleButtonFree">
           Show less
         </a>
       </div>
