--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <p class="m-0">12</p>
             <p class="m-0"><small>+1</small></p>
           </div>
-          <div class="d-flex flex-column align-items-center py-2">
+          <div class="d-flex flex-column align-items-center">
             <p class="font-weight-bold m-0"><strong>CHA</strong></p>
             <p class="m-0">12</p>
             <p class="m-0"><small>+1</small></p>
