--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a class="nav-link text-center" href="index.html">Ali</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-center" href="#">Rosalie</a>
+        <a class="nav-link text-center" href="rosalie.html">Rosalie</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-center" href="fx.html">FX</a>
