--- a/fx.html
+++ b/fx.html
@@ -43,7 +43,7 @@
         <a class="nav-link text-center" href="fx.html">FX</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-center" href="#">Javier</a>
+        <a class="nav-link text-center" href="alex.html">Alex</a>
       </li>
     </ul>
   </div>
