--- a/rosalie.html
+++ b/rosalie.html
@@ -43,7 +43,7 @@
         <a class="nav-link text-center" href="fx.html">FX</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-center" href="#">Javier</a>
+        <a class="nav-link text-center" href="alex.html">Alex</a>
       </li>
     </ul>
   </div>
@@ -325,7 +325,7 @@
                 <li class="nav-item d-flex flex-wrap gap-lg-1 gap-md-5">
                   <p class="m-0">You can inspire others through stirring words or music. To do so, you use a bonus action on your turn to choose one creature other than yourself within 60 feet of you who can hear you. That creature gains one Bardic Inspiration die, a d6.
                     <br>Once within the next 10 minutes, the creature can roll the die and add the number rolled to one ability check, attack roll, or saving throw it makes. The creature can wait until after it rolls the d20 before deciding to use the Bardic Inspiration die, but must decide before the DM says whether the roll succeeds or fails. Once the Bardic Inspiration die is rolled, it is lost. A creature can have only one Bardic Inspiration die at a time.
-                    <br>You can use this feature a number of times equal to your Charisma modifier (a minimum of once). You regain any expended uses when you finish a long rest.
+                    <br>You can use this feature a number of times equal to your Charisma modifier (a minimum of once). You regain any expended uses when you finish a long rest.</p>
                 </li>
               </ul>
             </li>
