--- a/alex.html
+++ b/alex.html
@@ -54,7 +54,7 @@
       <div class="d-flex flex-wrap justify-content-center align-items-center gap-4">
         <h2>Alex</h2>
         <p class="m-0"><small>Rogue (Soulknife) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kenku</small></p>
-        <img class="m-lg-auto m-md-auto" style="height: 8rem; width: 8rem" src="img/highelf.jpg" alt="hight elf">
+        <img class="m-lg-auto m-md-auto" style="height: 8rem; width: 8rem" src="img/kenku.jpg" alt="kenku">
       </div>
       <div class="m-0 w-100">
         <div class="d-flex flex-wrap gap-3 align-items-center justify-content-between m-2 p-2" style="background-color: #fafafa">
