--- a/alex.html
+++ b/alex.html
@@ -53,7 +53,7 @@
     <div class="container-fluid p-4 w-100" id="charac" style="background-color: white">
       <div class="d-flex flex-wrap justify-content-center align-items-center gap-4">
         <h2>Alex</h2>
-        <p class="m-0"><small>Rogue (Soulknife) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kenku</small></p>
+        <p class="m-0"><small><br>Rogue (Soulknife) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kenku</small></p>
         <img class="m-lg-auto m-md-auto" style="height: 8rem; width: 8rem" src="img/kenku.jpg" alt="kenku">
       </div>
       <div class="m-0 w-100">
