--- a/alex.html
+++ b/alex.html
@@ -45,6 +45,9 @@
       <li class="nav-item">
         <a class="nav-link text-center" href="alex.html">Alex</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link text-center" href="walid.html">Walid</a>
+      </li>
     </ul>
   </div>
 </nav>
